# mtest

./: LICENSE  README.md  example.c  example.cpp  makefile  mtest.c  mtest.cpp  mtest.h
cmake/: mtest.cmake
examples/basic/: basic  basic.cpp  makefile  tests.cpp
examples/cmake/: CMakeLists.txt  mtest.cmake  shared.cpp  tests.cpp
